# wajuce

./: .gitignore  .gitmodules  .metadata  .pubignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE.md  README.md  SKILLS.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.agent/: HANDOFF_2026-02-14.md  PROJECT_CONTEXT.md  WEBAUDIO_1_1_INTERFACE_CHECKLIST.md  implementation_plan.md  wajuce_architect.md
.agent/skills/iplug2_runtime/: SKILL.md
.agent/skills/juce_management/: SKILL.md
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: ios_sim_tutorial_capture.md
example/: README.md  build_log.txt  ios_build_log.txt  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/acidapps/wajuce_example/: MainActivity.kt
example/integration_test/: auto_dispose_phase1_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: clock_processor.dart  main.dart  oscilloscope_painter.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: wajuce.podspec
ios/Classes/: WajuceIPlug.mm  WajuceJUCE.mm  mod_juce_audio_basics.mm  mod_juce_audio_devices.mm  mod_juce_audio_formats.mm  mod_juce_audio_processors.mm  mod_juce_audio_processors_headless.mm  mod_juce_core.mm  mod_juce_data_structures.mm  mod_juce_dsp.mm  mod_juce_events.mm  mod_juce_graphics.mm  mod_juce_graphics_Harfbuzz.mm  mod_juce_graphics_Sheenbidi.c  mod_juce_gui_basics.mm  mod_juce_gui_extra.mm  mod_wajuce_engine.mm
lib/: wajuce.dart  wajuce_web.dart
lib/src/: audio_buffer.dart  audio_context_extras.dart  audio_listener.dart  audio_param.dart  context.dart  enums.dart  midi.dart  offline_context.dart
lib/src/backend/: backend.dart  backend_juce.dart  backend_native.dart  backend_stub.dart  backend_web.dart
lib/src/nodes/: analyser_node.dart  audio_destination_node.dart  audio_node.dart  audio_scheduled_source_node.dart  biquad_filter_node.dart  buffer_source_node.dart  channel_merger_node.dart  channel_splitter_node.dart  constant_source_node.dart  convolver_node.dart  delay_node.dart  dynamics_compressor_node.dart  gain_node.dart  iir_filter_node.dart  media_element_source_node.dart  media_stream_nodes.dart  media_stream_track_source_node.dart  oscillator_node.dart  panner_node.dart  periodic_wave.dart  script_processor_node.dart  stereo_panner_node.dart  wave_shaper_node.dart
lib/src/worklet/: audio_isolate.dart  audio_isolate_messages.dart  audio_isolate_native.dart  audio_isolate_stub.dart  audio_param_map.dart  ring_buffer.dart  ring_buffer_native.dart  wa_worklet.dart  wa_worklet_module.dart  wa_worklet_node.dart  wa_worklet_processor.dart
macos/: wajuce.podspec
macos/Classes/: WajuceIPlug.mm  WajuceJUCE.mm  WajuceRtAudio.cpp  WajuceRtMidi.cpp  wajuce.c
native/engine/: CMakeLists.txt
native/engine/Source/: NodeRegistry.h  ParamAutomation.h  Processors.h  RingBuffer.h  WAIPlugEngine.cpp  WAIPlugEngine.h  WajuceEngine.cpp  WajuceEngine.h  WajuceEngine.mm
native/engine/tests/: webaudio_render_smoke.cpp
src/: CMakeLists.txt  wajuce.c  wajuce.h
tool/: _wajuce_cli.dart  install_wajuce.dart  verify_wajuce.dart
windows/: CMakeLists.txt
